[project]
name = "mip"
version = "0.1.0"
description = "Test of Mixed Integer Programming (MIP) model solving in python"
authors = [
    {name = "Arne Sørli",email = "arnesor@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mip", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
